[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=hdf5viewer"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
src_paths = ["src", "main.py"]

[tool.black]

[tool.flake8]
max-line-length = 120
ignore = "D401"
exclude = ["tests"]

[tool.mypy]
mypy_path = "src"
exclude = ["venv"]
allow_untyped_globals = false
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_any_explicit = false
disallow_untyped_defs = true
follow_imports = "skip"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_no_return = true
ignore_missing_imports = true
implicit_optional = true
implicit_reexport = true
strict_optional = true
ignore_errors = false
local_partial_types = true
strict_concatenate = true
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
error_summary = true
show_absolute_path = false
incremental = true