[metadata]
name = hdf5viewer
description = HDF5 File Viewer
author = Dennis Lönard
license = GPLv3
license_files = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    hdf5viewer
    hdf5viewer.lib_h5
install_requires =
    argparse==1.4.0
    PyQt6==6.5.0
    PyQt6-Qt6==6.5.0
    h5py==3.8.0
    numpy==1.24.2
    pyqtgraph==0.13.1
    pyinstaller==5.10.0
python_requires = >=3.8
package_dir = =src
zip_safe = no

[options.extras_require]
testing =
    flake8==6.0.0
    tox==4.4.12
    pytest==7.3.1
    pytest-cov==4.0.0
    mypy==1.2.0
    h5py==3.8.0

[options.package_data]
hdf5viewer = py.typed

[flake8]
max-line-length = 120
exclude =
    .git
    .github
    .tox
    build
    debian
    dist
    html
    img
    venv
    windows
    {envtempdir}
